--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.2",
     "axios": "^1.6.8",
     "expo": "~54.0.10",
+    "expo-auth-session": "~7.0.8",
+    "expo-random": "^14.0.1",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "@react-native-picker/picker": "2.11.1"
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
